Finished challenge viewing hitpoints and test helpers

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,2 @@
-<%= @player1 %> vs. <%= @player2 %>
+<header> <%= @player1 %> vs. <%= @player2 %> </header>
+<div class='player1-hp' style="float: left;">100</div> <div class='player2-hp' style="float: left;">100</div>
