--- a/views/play.erb
+++ b/views/play.erb
@@ -1,2 +1,5 @@
 <header> <%= @player1 %> vs. <%= @player2 %> </header>
 <div class='player1-hp' style="float: left;">100</div> <div class='player2-hp' style="float: left;">100</div>
+<form action='/attack'>
+  <input type='submit' value='ATTACK <%= @player2 %>!'>
+</form>
