Challenge extracting logic to the model, add global variable

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <form action='/names' method='post'>
   <div>
-    <input type='text' name='Player1' placeholder='player 1 name'>
-    <input type='text' name='Player2' placeholder='player 2 name'>
+    <input type='text' name='player1' placeholder='player 1 name'>
+    <input type='text' name='player2' placeholder='player 2 name'>
     <button type='submit'>Save</button>
   </div>
 </form>
