--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,5 @@
-<header> <%= @player1 %> vs. <%= @player2 %> </header>
+<header> <%= @player1.name %> vs. <%= @player2.name %> </header>
 <div class='player1-hp' style="float: left;">100</div> <div class='player2-hp' style="float: left;">100</div>
 <form action='/attack'>
-  <input type='submit' value='ATTACK <%= @player2 %>!'>
+  <input type='submit' value='ATTACK <%= @player2.name %>!'>
 </form>
