Challenge skinny controllers DONE, get rid of many global(dangerous) variables

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,6 +1,6 @@
-<%= @player1.name %> attacked <%= @player2.name %>! <br>
-Player 1 HP: <%= @player1.hp %> <br>
-Player 2 HP: <%= @player2.hp %>
+<%= @game.player1.name %> attacked <%= @game.player2.name %>! <br>
+<%= @game.player1.name %> HP: <%= @game.player1.hp %> <br>
+<%= @game.player2.name %> HP: <%= @game.player2.hp %>
 
 <form action='/play'>
   <input type='submit' value='go next round!'>
